structure du sdk

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
     ports:
       - 7070:80
 
-  oauth-client:
+  sdk-oauth:
     image: php:apache
     working_dir: /var/www/html
     volumes:
-      - ./oauth-client:/var/www/html
+      - ./sdk-oauth:/var/www/html
     ports:
       - 7071:80
